--- a/index.html
+++ b/index.html
@@ -214,6 +214,6 @@
           <h2>Recently Played Tracks</h2>
           <ol id="recentlyPlayedList"></ol>
       </section>
-      <script src="src/search.js"></script>
+      <script src="/search.js"></script>
     </body>
 </html>
